[project]
name = "development-outsourcing-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
authors = [
    {name = "PRESSO", email = "caff1nepill@rmtechs.co.kr"}
]
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "dependency-injector>=4.0.0",
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.0.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0.0",
    "stamina>=25.2.0",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.41.0",
    "valkey>=6.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
preview = true
